Failed rendering with GPU Pitcairn 2 #49901

Closed
opened 2016-11-01 15:46:32 +01:00 by mike w. · 10 comments

Sorry if I am creating a duplicate, but I didn't know if I should create a new task or comment on another one.

System Information
Windows 7 x64 AMD R9 270 driver version: 16.10.2

Blender Version
Broken: blender-2.78-1ee43c5-win64
Working: 2.76rc2

GPU rendering on AMD Pitcairn still doesn't work, Blender fails to load render kernels:

Compiling OpenCL program base
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program base build output: "C:\temp\blender-2.78-1ee43c5-win64\blender-2.
78.0-git.1ee43c5-windows64\2.78\scripts\addons\cycles\kernel\kernels/opencl\../.
.\../../kernel_shader.h", line 280: error:
          struct "ShaderData" has no field "ob_tfm"
                ccl_fetch(sd, ob_tfm)  = lamp_fetch_transform(kg, lamp, false);
                ^

"C:\temp\blender-2.78-1ee43c5-win64\blender-2.78.0-git.1ee43c5-windows64\2.78\sc
ripts\addons\cycles\kernel\kernels/opencl\../..\../../kernel_shader.h", line 281
: error:
          struct "ShaderData" has no field "ob_itfm"
                ccl_fetch(sd, ob_itfm) = lamp_fetch_transform(kg, lamp, true);
                ^

2 errors detected in the compilation of "C:\Users\%username%\AppData\Local\Temp\OC
L8228T1.cl".
Frontend phase failed compilation.

Sorry if I am creating a duplicate, but I didn't know if I should create a new task or comment on another one. **System Information** Windows 7 x64 AMD R9 270 driver version: 16.10.2 **Blender Version** Broken: blender-2.78-1ee43c5-win64 Working: 2.76rc2 GPU rendering on AMD Pitcairn still doesn't work, Blender fails to load render kernels: ``` Compiling OpenCL program base OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program base build output: "C:\temp\blender-2.78-1ee43c5-win64\blender-2. 78.0-git.1ee43c5-windows64\2.78\scripts\addons\cycles\kernel\kernels/opencl\../. .\../../kernel_shader.h", line 280: error: struct "ShaderData" has no field "ob_tfm" ccl_fetch(sd, ob_tfm) = lamp_fetch_transform(kg, lamp, false); ^ "C:\temp\blender-2.78-1ee43c5-win64\blender-2.78.0-git.1ee43c5-windows64\2.78\sc ripts\addons\cycles\kernel\kernels/opencl\../..\../../kernel_shader.h", line 281 : error: struct "ShaderData" has no field "ob_itfm" ccl_fetch(sd, ob_itfm) = lamp_fetch_transform(kg, lamp, true); ^ 2 errors detected in the compilation of "C:\Users\%username%\AppData\Local\Temp\OC L8228T1.cl". Frontend phase failed compilation. ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mikewazowski11

Added subscriber: @mikewazowski11

#49916 was marked as duplicate of this issue

#49916 was marked as duplicate of this issue

Added subscriber: @VukGardasevic

Added subscriber: @VukGardasevic

Added subscriber: @Katharsas

Added subscriber: @Katharsas

Added subscribers: @matali23, @MaiLavelle

Added subscribers: @matali23, @MaiLavelle

This issue was referenced by blender/cycles@8753ffe5c9

This issue was referenced by blender/cycles@8753ffe5c917b7df1056f319d947513790a0f66a

This issue was referenced by 9847ad977a

This issue was referenced by 9847ad977a29685d3400ec222213dfb484ec01f5
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @JonathanBenning

Added subscriber: @JonathanBenning
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49901
No description provided.